@@ -1,6 +1,7 @@
-SUBDIRS = obdfilter-survey sgpdd-survey ost-survey ior-survey stats-collect
+SUBDIRS = obdfilter-survey sgpdd-survey ost-survey ior-survey
+SUBDIRS += mds-survey stats-collect
 
-EXTRA_DIST = lustre-iokit.spec 
+EXTRA_DIST = lustre-iokit.spec
 
 rpms rpm: dist
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
