@@ -1,6 +1,6 @@
 AC_INIT
 AC_CONFIG_AUX_DIR([.])
-AM_INIT_AUTOMAKE(lustre-iokit,1.3.0)
+AM_INIT_AUTOMAKE(lustre-iokit,1.4.0)
 AC_PATH_PROGS(BASH, bash)
 AC_PATH_PROGS(PERL, perl)
 RELEASE="1"
@@ -13,5 +13,6 @@ sgpdd-survey/Makefile
 obdfilter-survey/Makefile
 ost-survey/Makefile
 ior-survey/Makefile
+mds-survey/Makefile
 stats-collect/Makefile
 )
