@@ -259,6 +259,9 @@ get_ec_devno () {
     local host=$1
     local client_name="$2"
     local ost_name="$3"
+    local dev_type="${4:-obdfilter}"
+    local stack_type="${5:-}"
+
     if [ -z "$client_name" ]; then
 	if [ -z "$ost_name" ]; then
 	    echo "client and ost name both null"
@@ -276,7 +279,7 @@ get_ec_devno () {
             "$client_name, host: $host"
 	exit 1
     fi
-    ost=`get_devno $host obdfilter $ost_name`
+    ost=`get_devno $host $dev_type $ost_name`
     if [ -z "$ost" ]; then
 	echo "OST $ost_name not setup"
 	exit 1
@@ -284,7 +287,7 @@ get_ec_devno () {
     client_name=${ost_name}_ecc
     remote_shell $host "$lctl <<EOF
         attach echo_client $client_name ${client_name}_UUID
-	setup $ost_name
+	setup $ost_name $stack_type
 EOF"
     ec=`get_devno $host echo_client $client_name`
     if [ -z "$ec" ]; then
